--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "add": "^2.0.6",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
+    "mapbox-gl": "^1.10.1",
     "or": "^0.2.0",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
